welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:4: error: not found: value c
	for(c <- 1 to nums.length - c) {
                                    ^